--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,6 @@
 
 # misc
 .DS_Store
-.env
-.env.*     # .env.local, .env.production, etc.
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -40,3 +38,8 @@ ehthumbs.db
 
 # react-scripts specific
 /.eslintcache
+
+# dotenv environment variables file
+.env
+.env.local
+.env.*     # .env.local, .env.production, etc.
